[package]
name = "fortyone-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.1", features = ["v4", "serde"] }
rand = "0.9.0-beta.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
tracing-subscriber = "0.3.19"
