[package]
name = "fortyone-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.1", features = ["v4", "serde"] }
rand = "0.9.0-beta.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
tracing-subscriber = "0.3.19"
dotenvy = "0.15"
base62 = "0.2"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "0.2.12"
tower = "0.4.13"
